--- a/package.json
+++ b/package.json
@@ -23,10 +23,16 @@
   },
   "homepage": "https://github.com/uon-team/cli#readme",
   "dependencies": {
+    "@types/inquirer": "0.0.43",
     "@types/node": "^10.11.0",
     "@types/webpack": "^4.4.13",
     "@uon/core": "^0.4.0",
+    "colors": "^1.3.3",
     "commander": "^2.18.0",
+    "copy-webpack-plugin": "^4.6.0",
+    "html-webpack-plugin": "^3.2.0",
+    "inquirer": "^6.2.2",
+    "sass-webpack-plugin": "^1.0.3",
     "ts-loader": "^5.2.1",
     "typescript": "^3.1.3",
     "webpack": "^4.20.2"
