--- a/package.json
+++ b/package.json
@@ -30,9 +30,14 @@
     "colors": "^1.3.3",
     "commander": "^2.18.0",
     "copy-webpack-plugin": "^4.6.0",
+    "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
     "inquirer": "^6.2.2",
-    "sass-webpack-plugin": "^1.0.3",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "sass-loader": "^7.1.0",
+    "terser-webpack-plugin": "^1.2.2",
     "ts-loader": "^5.2.1",
     "typescript": "^3.1.3",
     "webpack": "^4.20.2"
