--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uon/cli",
-  "version": "0.1.0",
+  "version": "0.4.0",
   "description": "Command line tools for UON framework",
   "main": "dist/index.js",
   "preferGlobal": true,
@@ -8,8 +8,7 @@
     "uon": "dist/bin.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && cp -r templates dist/"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -39,6 +38,7 @@
     "sass-loader": "^7.1.0",
     "terser-webpack-plugin": "^1.2.2",
     "ts-loader": "^5.2.1",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.1.3",
     "webpack": "^4.20.2"
   }
