--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
   "homepage": "https://github.com/uon-team/cli#readme",
   "dependencies": {
     "@types/inquirer": "0.0.43",
+    "@types/mime-types": "^2.1.0",
     "@types/node": "^10.11.0",
     "@types/webpack": "^4.4.13",
     "@uon/core": "^0.4.0",
+    "@wasm-tool/wasm-pack-plugin": "^0.4.2",
     "colors": "^1.3.3",
     "commander": "^2.18.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
     "inquirer": "^6.2.2",
+    "mime-types": "^2.1.24",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -40,6 +43,6 @@
     "ts-loader": "^5.2.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.1.3",
-    "webpack": "^4.20.2"
+    "webpack": "^4.32.2"
   }
 }
