--- a/package.json
+++ b/package.json
@@ -24,23 +24,27 @@
   "dependencies": {
     "@types/inquirer": "0.0.43",
     "@types/mime-types": "^2.1.0",
-    "@types/node": "^10.11.0",
-    "@types/webpack": "^4.4.13",
+    "@types/node": "^10.17.13",
+    "@types/webpack": "^4.41.2",
     "@uon/core": "^0.9.0",
-    "colors": "^1.3.3",
-    "commander": "^2.18.0",
+    "@uon/string-utils": "^1.0.0",
+    "colors": "^1.4.0",
+    "commander": "^2.20.3",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
-    "inquirer": "^6.2.2",
+    "inquirer": "^6.5.2",
     "mini-css-extract-plugin": "^0.7.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "sass-loader": "^7.1.0",
-    "terser-webpack-plugin": "^1.2.2",
+    "sass-loader": "^7.3.1",
+    "terser-webpack-plugin": "^1.4.3",
     "ts-loader": "^5.2.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.1.3",
-    "webpack": "^4.32.2"
+    "typescript": "^3.7.4",
+    "webpack": "^4.41.5"
+  },
+  "devDependencies": {
+    "json-loader": "^0.5.7"
   }
 }
