--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@uon/cli",
-  "version": "0.9.1",
+  "version": "0.11.0",
   "description": "Command line tools for UON framework",
-  "main": "dist/index.js",
+  "main": "dist/bin.js",
   "preferGlobal": true,
   "bin": {
     "uon": "dist/bin.js"
@@ -16,34 +16,22 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/uon-team/cli/issues"
   },
   "homepage": "https://github.com/uon-team/cli#readme",
+  "devDependencies": {
+    "@types/node": "^16.11.12"
+  },
   "dependencies": {
-    "@types/inquirer": "0.0.43",
-    "@types/mime-types": "^2.1.0",
-    "@types/node": "^10.17.13",
-    "@uon/core": "^0.9.0",
-    "@uon/string-utils": "^1.0.0",
-    "colors": "^1.4.0",
-    "commander": "^2.20.3",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^2.1.0",
-    "html-webpack-plugin": "^4.0.0-beta.14",
-    "inquirer": "^6.5.2",
-    "mini-css-extract-plugin": "^0.7.0",
-    "node-sass": "^4.13.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "sass-loader": "^7.3.1",
+    "@types/copy-webpack-plugin": "^8.0.1",
+    "commander": "^8.3.0",
+    "copy-webpack-plugin": "^10.0.0",
     "terser-webpack-plugin": "^5.2.5",
     "ts-loader": "^9.2.6",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^4.5.2",
     "webpack": "^5.65.0"
-  },
-  "devDependencies": {
-    "json-loader": "^0.5.7"
   }
 }
